# oce-db-import

./: .gitignore  AGENT_HANDOFF.md  GUIDE_CLOUD_EXAMINER_AI.md  README.md  pyproject.toml  requirements.txt  setup.cfg
db/: __init__.py  apply_migrations.py
db/migrations/: 001_init.sql  002_sources_checksum_unique.sql  003_osce_runtime_and_safety.sql  004_station_metadata_patient_findings_safety_exam_attempts.sql  005_audit_prompt_versions_and_rubric_snapshots.sql  006_station_run_results.sql  007_scores_evidence_and_indexes.sql
examiner/: apply_marksheet.py  marksheet_models.py  writeback.py
exporter/: export_to_json.py
importer/: create_cpte_training_rubric.py  db.py  extractors.py  generate_osce_cases_from_dutton.py  import_sources.py  pdf_text.py  seed_osce_marking_primitives.py  structured_casebank.py  structured_textbook.py
oce_cli/: __main__.py  cli.py
runtime/: action_taxonomy.py  backfill_allowed_actions.py  config.py  dbconn.py  enforce_station.py  events.py  station_cli.py  station_context.py  station_runtime.py
scoring/: passfail.py
tests/: smoke_marksheet_writeback.py  smoke_run.py  web_smoke_http.py
web/: api.py  serve.py
