[metadata]
name = oce-osce-sim
version = 0.1.0
description = Ontario OCE OSCE simulator (DB schema + importer/exporter + examiner tooling)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    psycopg[binary]==3.2.10
    pydantic==2.11.4
    pypdf==5.4.0
include_package_data = True

[options.packages.find]
where = .
include =
    importer*
    exporter*
    examiner*
    runtime*
    scoring*
    db*
    oce_cli*

[options.entry_points]
console_scripts =
    oce = oce_cli.cli:main

